Changing the design. ;)

--- a/modgui/bolliedelayxt.html
+++ b/modgui/bolliedelayxt.html
@@ -100,14 +100,14 @@
   <div class="mod-knob" title="High Cut Frequency">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_HCF_PRE_FREQ"></div><span 
-    class="mod-knob-title">High cut freq.</span>
+    class="mod-knob-title">Freq.</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_HCF_PRE_FREQ"></div>
   </div>
   <div class="mod-knob" title="High Cut Quality">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_HCF_PRE_Q"></div><span 
-    class="mod-knob-title">High cut Q.</span>
+    class="mod-knob-title bright">Quality</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_HCF_PRE_Q"></div>
   </div>
@@ -115,19 +115,19 @@
   <div class="mod-knob" title="Switch Low Cut Filter">
    <div class="mod-toggle off" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_PRE_ON" mod-widget="switch"></div><span 
-    class="mod-knob-title">Low cut on</span>
+    class="mod-knob-title bright">Low cut on</span>
   </div>
   <div class="mod-knob" title="Low Cut Frequency">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_PRE_FREQ"></div><span 
-    class="mod-knob-title">Low cut freq.</span>
+    class="mod-knob-title">Freq.</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_LCF_PRE_FREQ"></div>
   </div>
   <div class="mod-knob" title="Low Cut Quality">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_PRE_Q"></div><span 
-    class="mod-knob-title">Low cut Q.</span>
+    class="mod-knob-title">Quality</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_LCF_PRE_Q"></div>
   </div>
@@ -140,14 +140,14 @@
   <div class="mod-knob" title="High Cut Frequency">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_HCF_FB_FREQ"></div><span 
-    class="mod-knob-title">High cut freq.</span>
+    class="mod-knob-title">Freq.</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_HCF_FB_FREQ"></div>
   </div>
   <div class="mod-knob" title="High Cut Quality">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_HCF_FB_Q"></div><span 
-    class="mod-knob-title">High cut Q.</span>
+    class="mod-knob-title bright">Quality</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_HCF_FB_Q"></div>
   </div>
@@ -155,19 +155,19 @@
   <div class="mod-knob" title="Switch Low Cut Filter (Feedback)">
    <div class="mod-toggle off" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_FB_ON" mod-widget="switch"></div><span 
-    class="mod-knob-title">LCF on (FB)</span>
+    class="mod-knob-title bright">LCF on (FB)</span>
   </div>
   <div class="mod-knob" title="Low Cut Frequency">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_FB_FREQ"></div><span 
-    class="mod-knob-title">Low cut freq.</span>
+    class="mod-knob-title">Freq.</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_LCF_FB_FREQ"></div>
   </div>
   <div class="mod-knob" title="Low Cut Quality">
    <div class="mod-knob-image" mod-role="input-control-port"
     mod-port-symbol="CP_LCF_FB_Q"></div><span 
-    class="mod-knob-title">Low cut Q.</span>
+    class="mod-knob-title">Quality</span>
    <div class="mod-knob-value" contenteditable="false"
     mod-role="input-control-value" mod-port-symbol="CP_LCF_FB_Q"></div>
   </div>
