Fixed CSS class.

--- a/modgui/bolliedelayxt.html
+++ b/modgui/bolliedelayxt.html
@@ -1,4 +1,4 @@
-<div class="mod-pedal bolliedelay">
+<div class="mod-pedal bolliedelayxt">
  <div mod-role="drag-handle" class="mod-drag-handle"></div>
  <div class="bollie-group double">
   <div class="mod-knob" title="This sets the tempo mode.">
